; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bwn/extr_if_bwn.c_bwn_vap_delete.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bwn/extr_if_bwn.c_bwn_vap_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211vap = type { i32 }
%struct.bwn_vap = type { i32 }

@M_80211_VAP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ieee80211vap*)* @bwn_vap_delete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bwn_vap_delete(%struct.ieee80211vap* %0) #0 {
  %2 = alloca %struct.ieee80211vap*, align 8
  %3 = alloca %struct.bwn_vap*, align 8
  store %struct.ieee80211vap* %0, %struct.ieee80211vap** %2, align 8
  %4 = load %struct.ieee80211vap*, %struct.ieee80211vap** %2, align 8
  %5 = call %struct.bwn_vap* @BWN_VAP(%struct.ieee80211vap* %4)
  store %struct.bwn_vap* %5, %struct.bwn_vap** %3, align 8
  %6 = load %struct.ieee80211vap*, %struct.ieee80211vap** %2, align 8
  %7 = call i32 @ieee80211_ratectl_deinit(%struct.ieee80211vap* %6)
  %8 = load %struct.ieee80211vap*, %struct.ieee80211vap** %2, align 8
  %9 = call i32 @ieee80211_vap_detach(%struct.ieee80211vap* %8)
  %10 = load %struct.bwn_vap*, %struct.bwn_vap** %3, align 8
  %11 = load i32, i32* @M_80211_VAP, align 4
  %12 = call i32 @free(%struct.bwn_vap* %10, i32 %11)
  ret void
}

declare dso_local %struct.bwn_vap* @BWN_VAP(%struct.ieee80211vap*) #1

declare dso_local i32 @ieee80211_ratectl_deinit(%struct.ieee80211vap*) #1

declare dso_local i32 @ieee80211_vap_detach(%struct.ieee80211vap*) #1

declare dso_local i32 @free(%struct.bwn_vap*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
